add_library(GameEngine
SceneNode.h
Texture2D.cpp
Texture2D.h
Asset.cpp
Asset.h
AssetNode.cpp
AssetNode.h
AssetImporter.h
AssetImporter.cpp
BoundingVolumes.h
BoundingVolumes.cpp
Camera.cpp
Camera.h
Game.cpp
Game.h
GPUResource.cpp
GPUResource.h
Light.cpp
Light.h
Material.cpp
Material.h
Mesh.cpp
Mesh.h
MeshRenderer.cpp
MeshRenderer.h
ParticleSystem.cpp
ParticleSystem.h
RenderObject.cpp
RenderObject.h
Resource.cpp
Resource.h
ResourceMgr.cpp
ResourceMgr.h
Scene.cpp
Scene.h
SceneMgr.cpp
SceneMgr.h
SceneNode.cpp
Shader.h
Shader.cpp
ShaderMgr.h
ShaderMgr.cpp
FilePathMgr.h
FilePathMgr.cpp
)

target_include_directories(GameEngine PUBLIC 
"${CMAKE_SOURCE_DIR}/EngineTools"
"${CMAKE_SOURCE_DIR}/RenderEngine"
"${CMAKE_SOURCE_DIR}/External/glm"
"${CMAKE_SOURCE_DIR}/External/ModelImporter"
)