add_library(GameEngine
SceneNode.h
Texture2D.cpp
Texture2D.h
Asset.cpp
Asset.h
AssetNode.cpp
AssetNode.h
AssetImporter.h
AssetImporter.cpp
MathHelper.h
MathHelper.cpp
Camera.cpp
Camera.h
Game.cpp
Game.h
GPUResource.cpp
GPUResource.h
Light.cpp
Light.h
Material.cpp
Material.h
Mesh.cpp
Mesh.h
MeshRenderer.cpp
MeshRenderer.h
ParticleSystem.cpp
ParticleSystem.h
RenderObject.cpp
RenderObject.h
Resource.cpp
Resource.h
ResourceMgr.cpp
ResourceMgr.h
Scene.cpp
Scene.h
SceneMgr.cpp
SceneMgr.h
SceneNode.cpp
Shader.h
Shader.cpp
ShaderMgr.h
ShaderMgr.cpp
FilePathMgr.h
FilePathMgr.cpp
Animation.h
Animation.cpp
SpatialVolumes.h
SpatialVolumes.cpp
ThreadPool.h
ThreadPool.cpp
TextureCube.h
TextureCube.cpp
Environment.h
Environment.cpp
SkyModels.h
SkyModels.cpp
CascadedShadowMap.h
CascadedShadowMap.cpp
${CMAKE_SOURCE_DIR}/External/HosekWilkie_SkylightModel_C_Source.1.4a/ArHosekSkyModel.cpp
)

target_include_directories(GameEngine PUBLIC 
"${CMAKE_SOURCE_DIR}/EngineTools"
"${CMAKE_SOURCE_DIR}/RenderEngine"
"${CMAKE_SOURCE_DIR}/External/glm"
"${CMAKE_SOURCE_DIR}/External/ModelImporter"
"${CMAKE_SOURCE_DIR}/External/assimp/include"
"${CMAKE_SOURCE_DIR}/lib/include"
"${CMAKE_SOURCE_DIR}/External/HosekWilkie_SkylightModel_C_Source.1.4a"
)