add_library(RenderEngine
VulkanSurface.cpp
VulkanTexture.cpp
VulkanTextureCube.cpp
VulkanUniformBuffer.cpp
CommandBuffer.h
DirectXCommandBuffer.h
DirectXDevice.h
DirectXGraphicsPipeline.h
DirectXMesh.h
DirectXObject.h
DirectXRenderOutput.h
DirectXRenderTarget.h
DirectXSampler.h
DirectXShader.h
DirectXShaderResource.h
DirectXSurface.h
DirectXTexture.h
DirectXTextureCube.h
DirectXUniformBuffer.h
DirectXTextureArray.h
GraphicsAPIDef.h
GraphicsContext.h
GraphicsObject.h
GraphicsPipeline.h
GraphicsWindow.h
ICommandBuffer.h
IDevice.h
IGraphicsPipeline.h
IMesh.h
InputCodes.h
IObject.h
IRenderTarget.h
ISampler.h
IShader.h
IShaderBindings.h
ISurface.h
ITexture.h
ITextureCube.h
ITextureArray.h
IUniformBuffer.h
BaseMesh.h
PipelineSettings.h
RenderTarget.h
Sampler.h
SamplerSettings.h
Shader.h
Surface.h
BaseTexture.h
BaseTextureCube.h
BaseTextureArray.h
UniformBuffer.h
VulkanCommandBuffer.h
VulkanDevice.h
VulkanGraphicsPipeline.h
VulkanMesh.h
VulkanObject.h
VulkanRenderOutput.h
VulkanRenderTarget.h
VulkanSampler.h
VulkanShader.h
VulkanSurface.h
VulkanTexture.h
VulkanTextureCube.h
VulkanUniformBuffer.h
VulkanTextureArray.h
CommandBuffer.cpp
DirectXCommandBuffer.cpp
DirectXDevice.cpp
DirectXGraphicsPipeline.cpp
DirectXMesh.cpp
DirectXObject.cpp
DirectXRenderOutput.cpp
DirectXRenderTarget.cpp
DirectXSampler.cpp
DirectXShader.cpp
DirectXShaderResource.cpp
DirectXSurface.cpp
DirectXTexture.cpp
DirectXTextureCube.cpp
DirectXTextureArray.cpp
DirectXUniformBuffer.cpp
GraphicsAPIDef.cpp
GraphicsContext.cpp
GraphicsObject.cpp
GraphicsPipeline.cpp
GraphicsWindow.cpp
ICommandBuffer.cpp
IDevice.cpp
IGraphicsPipeline.cpp
IMesh.cpp
IObject.cpp
IRenderTarget.cpp
ISampler.cpp
IShader.cpp
IShaderBindings.cpp
ISurface.cpp
ITexture.cpp
ITextureCube.cpp
ITextureArray.cpp
IUniformBuffer.cpp
BaseMesh.cpp
RenderTarget.cpp
Sampler.cpp
Shader.cpp
Surface.cpp
BaseTexture.cpp
BaseTextureCube.cpp
BaseTextureArray.cpp
UniformBuffer.cpp
VulkanCommandBuffer.cpp
VulkanDevice.cpp
VulkanGraphicsPipeline.cpp
VulkanMesh.cpp
VulkanObject.cpp
VulkanRenderOutput.cpp
VulkanRenderTarget.cpp
VulkanSampler.cpp
VulkanShader.cpp
VulkanTextureArray.cpp


ShaderCompiler.h
ShaderCompiler.cpp
HLSL_To_GLSL.h
HLSL_To_GLSL.cpp
)

target_include_directories(RenderEngine PUBLIC 
"${CMAKE_SOURCE_DIR}/EngineTools"
"${CMAKE_SOURCE_DIR}/Math")

target_link_libraries(RenderEngine Vulkan::Vulkan)