add_library(RenderEngine
VulkanUniformBuffer.h
VulkanUniformBuffer.cpp
VulkanTextureCube.h
VulkanTextureCube.cpp
VulkanTextureArray.h
VulkanTextureArray.cpp
VulkanTexture.h
VulkanTexture.cpp
VulkanSurface.h
VulkanSurface.cpp
VulkanShader.h
VulkanShader.cpp
VulkanSampler.h
VulkanSampler.cpp
VulkanRenderTarget.h
VulkanRenderTarget.cpp
VulkanRenderOutput.h
VulkanRenderOutput.cpp
VulkanObject.h
VulkanObject.cpp
VulkanMesh.h
VulkanMesh.cpp
VulkanGraphicsPipeline.h
VulkanGraphicsPipeline.cpp
VulkanDevice.h
VulkanDevice.cpp
VulkanCommandBuffer.h
VulkanCommandBuffer.cpp
UniformBuffer.h
UniformBuffer.cpp
Surface.h
Surface.cpp
ShaderCompiler.h
ShaderCompiler.cpp
SamplerSettings.h
Sampler.h
Sampler.cpp
RenderTarget.h
RenderTarget.cpp
PipelineSettings.h
IUniformBuffer.h
IUniformBuffer.cpp
ITextureCube.h
ITextureCube.cpp
ITextureArray.h
ITextureArray.cpp
ITexture.h
ITexture.cpp
ISurface.h
ISurface.cpp
IShaderBindings.h
IShaderBindings.cpp
IShader.h
IShader.cpp
ISampler.h
ISampler.cpp
IRenderTarget.h
IRenderTarget.cpp
IObject.h
IObject.cpp
InputCodes.h
IMesh.h
IMesh.cpp
IGraphicsPipeline.h
IGraphicsPipeline.cpp
IDevice.h
IDevice.cpp
ICommandBuffer.h
ICommandBuffer.cpp
HLSL_To_GLSL.h
HLSL_To_GLSL.cpp
GraphicsWindow.h
GraphicsWindow.cpp
GraphicsPipeline.h
GraphicsPipeline.cpp
GraphicsObject.h
GraphicsObject.cpp
GraphicsContext.h
GraphicsContext.cpp
GraphicsAPIDef.h
GraphicsAPIDef.cpp
D3D11UniformBuffer.h
D3D11UniformBuffer.cpp
D3D11TextureCube.h
D3D11TextureCube.cpp
D3D11TextureArray.h
D3D11TextureArray.cpp
D3D11Texture.h
D3D11Texture.cpp
D3D11Surface.h
D3D11Surface.cpp
D3D11ShaderResource.h
D3D11ShaderResource.cpp
D3D11Shader.h
D3D11Shader.cpp
D3D11Sampler.h
D3D11Sampler.cpp
D3D11RenderTarget.h
D3D11RenderTarget.cpp
D3D11RenderOutput.h
D3D11RenderOutput.cpp
D3D11Object.h
D3D11Object.cpp
D3D11Mesh.h
D3D11Mesh.cpp
D3D11GraphicsPipeline.h
D3D11GraphicsPipeline.cpp
D3D11Device.h
D3D11Device.cpp
D3D11CommandBuffer.h
D3D11CommandBuffer.cpp
CommandBuffer.h
CommandBuffer.cpp
CMakeLists.txt
BaseTextureCube.h
BaseTextureCube.cpp
BaseTextureArray.h
BaseTextureArray.cpp
BaseTexture.h
BaseTexture.cpp
BaseShader.h
BaseShader.cpp
BaseMesh.h
BaseMesh.cpp
)

target_include_directories(RenderEngine PUBLIC 
"${CMAKE_SOURCE_DIR}/EngineTools"
"${CMAKE_SOURCE_DIR}/Math")

target_link_libraries(RenderEngine Vulkan::Vulkan)